[gd_scene load_steps=3 format=3 uid="uid://cf7y1avv2tj14"]

[ext_resource type="Script" path="res://menus/main_menu/main_menu.gd" id="1_3eji4"]
[ext_resource type="PackedScene" uid="uid://bltmj0yrnhuj7" path="res://menus/player_selection/player_selection.tscn" id="2_uim1l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3eji4")
play_scene = ExtResource("2_uim1l")

[node name="PlayButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_right = 20.5
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="CreditsButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = 80.0
offset_right = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
